--- a/.gitconfig
+++ b/.gitconfig
@@ -2,4 +2,4 @@
 [user]
 # Please adapt and uncomment the following lines
 name = Younes Askour
-email = yaskour@e1r5p1.1337.ma
+email = pausedarkf@gmail.com
