--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
-# don't rename windows automatically
+#don't rename windows automatically 
 set-option -g allow-rename off
 
 # split panes using | and -
@@ -10,13 +10,57 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+
+set -g status-interval 1
+set -g status-left '#[bg=#78dce8]#[fg=black]#{?client_prefix,#[bg=#e5c463],}                '
+
+
+
+
+
+#set-window-option -g window-status-style fg='#f85e84',bg=default
+#set-window-option -g window-status-current-style fg='#ff79c6',bg=default
+set-window-option -g window-status-current-format "#[fg=white,bg=#211f21] #W* "
+
+
+set-window-option -g window-status-format "#[fg=#e3e1e4, bg=#ff6188] #W "
+
+
+
+
+
+
+
+set -g status-right '#[default] #[fg=white]%H:%M#[default] '
+
+# clipboard program
+set -s copy-command 'wl-copy'
+
+# vim key-biddings
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
+
+# select pane vim style 
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+
+# windows bindings
+bind-key t next-window
+bind-key c new-window
+
+# vim mode
+setw -g mode-keys vi
+
+#reload .tmux.conf
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
